--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -32,6 +32,11 @@ body {
 	line-height: 1;
 	background-color: #FFFEF8;
 }
+
+.main-content{
+	margin-left: 100px;
+	margin-right: 100px;
+}
 ol, ul {
 	list-style: none;
 }
@@ -49,7 +54,6 @@ table {
 }
 /** end reset css**/
 body {
-	max-width: 1140px;
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
@@ -111,6 +115,7 @@ nav li {
 #introduction {
 	display: flex;
 	align-items: center;
+	margin-right: 70px;
 }
 #introduction figure {
 	flex: 1
@@ -118,7 +123,7 @@ nav li {
 #introduction img {
 	display: block;
 	margin: auto;
-	width: 80%;
+	width: 75%;
 }
 
 #introduction article {
@@ -130,6 +135,10 @@ nav li {
 
 #introduction p {
 	margin-bottom: 0.5em;
+}
+
+article{
+	width: 300px;
 }
 
 .categories {
@@ -160,11 +169,13 @@ button:active{
 	margin-bottom: 1em;
 }
 .gallery {
-	width: 100%;
+	width: 75%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-column-gap: 20px;
 	grid-row-gap: 20px;
+	margin: auto;
+	padding-bottom: 90px;
 }
 
 .gallery img {
@@ -174,7 +185,7 @@ button:active{
 
 
 #contact {
-	width: 50%;
+	width: 35%;
 margin: auto;
 }
 #contact > * {
@@ -220,10 +231,12 @@ padding-top: 50px;
 	margin-bottom: 20px;
 }
 #login form {
+	width: 70%;
 	text-align: left;
 	margin-top:30px;
 	display: flex;
 	flex-direction: column;
+	margin-left: 85px;
 }
 
 #login input {
@@ -283,6 +296,10 @@ footer nav ul {
 	margin-bottom: -40px;
 }
 
+#edit-icon-bandeau{
+	color: white;
+}
+
 .textEdit {
 	color: white;
 }
@@ -320,15 +337,14 @@ footer nav ul {
 /* MODALE */ 
 
 .modalContainer {
+	display: none;
 	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	background: rgba(0, 0, 0, 0.5);
-	display: flex;
-	justify-content: center;
-	align-items: center;
+
 }
 
 .modal {
@@ -336,7 +352,7 @@ footer nav ul {
 	background-color: white;
 	padding : 20px;
 	width: 40%;
-	height: 90%;
+	height: 70%;
 	border-radius: 10px;
 	position: relative;
 }
@@ -404,8 +420,9 @@ hr {
 }
 
 .card{
-	display: grid;
-	grid-template-columns: 20% 20% 20% 20% 20%;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
 	position: relative;
 	margin-bottom: 15px;
 }
